Trying static build in github release action.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -147,7 +147,7 @@ jobs:
         ccache -p
         ccache -s
 
-        ./build.sh --threads --prefix $HOME/local --build-type relwithdebinfo
+        ./build.sh --static --threads --prefix $HOME/local --build-type relwithdebinfo
 
         ccache -s
 
