Updating gh release action.
Adding missing 'sudo' to apt-get install.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -91,12 +91,8 @@ jobs:
     - name: Install Linux dependencies
       if: runner.os == 'Linux'
       run: |
-        # if [ -n "${{ matrix.image }}" ]  ; then
-        #   apt-get update && apt-get install -y sudo build-essential git cmake
-        # fi
-
-        # sudo apt-get update
-        sudo apt-get update && apt-get install -y sudo build-essential git cmake
+        sudo apt-get update
+        sudo apt-get install -y sudo build-essential git cmake
         sudo apt-get install -y ccache
         if [ "${{ matrix.compiler }}" = "gcc" ]
         then
